--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
     -->
         <title>COVID Dashboard-Lite</title>
     </head>
-    <body>
+    <body class="bg-secondary">
         <noscript>You need to enable JavaScript to run this app.</noscript>
         <div id="root"></div>
         <!--
